--- a/express/src/views/index.ejs
+++ b/express/src/views/index.ejs
@@ -221,7 +221,7 @@ body{
 				
 				<% Data.forEach(function(Dat1) { %>
 					<%if(Dat1.user==user1 && Dat1.password==password1){%>
-						<a href="/pagina">yeiiii</a>
+						<a href="/menu">yeiiii</a>
 					<% } %>
 				<% }); %>
 		</div>
