--- a/express/src/views/menu.ejs
+++ b/express/src/views/menu.ejs
@@ -20,7 +20,7 @@
     .TopW{
         width: 100%;
         height: 292px;
-        background-image: url(https://mypcwalls.com/wp-content/uploads/2021/08/Abstract-Wallpaper.jpg);
+        background-image: url(https://s3.envato.com/files/aaf1ba3e-a327-419a-b5af-9f6afdd60132/inline_image_preview.jpg);
         background-size: cover;
         
     }
@@ -117,7 +117,7 @@
             width: 420px;
             border-bottom-left-radius: 20px;
             border-bottom-right-radius: 20px;
-            background-image: url(https://mypcwalls.com/wp-content/uploads/2021/08/Abstract-Wallpaper.jpg);
+            background-image: url(https://s3.envato.com/files/aaf1ba3e-a327-419a-b5af-9f6afdd60132/inline_image_preview.jpg);
             background-size: cover;
         }
 
@@ -126,8 +126,7 @@
     <NavBar>
         <ul>
             <li><a href="default.asp">FlowMap</a></li>
-            <li><a href="contact.asp">Options</a></li>
-            <li style="float: right"><a class="active" href="about.asp">Sign Up</a></li>
+            <li style="float: right"><a class="active" href="/">Back</a></li>
           </ul>
     </NavBar>
     <div class="TopW">
@@ -142,17 +141,7 @@
             <div class="name"><a>+ Diagram</a></div>
             <div class="design"></div>
         </div>
-        <% Data.forEach(function(Dat1) { %>
-            <%if(Dat1.user=="Carl1"){%>
-               
-                    <div class="diagram">
-                        <div class="name"><a>Diagram 1</a></div>
-                        <div class="design"></div>
-                    </div>
-                
-               
-            <% } %>
-        <% }); %>
+       
         
     
     </div>
