--- a/express/src/views/signup.ejs
+++ b/express/src/views/signup.ejs
@@ -14,7 +14,7 @@ body{
 	margin: 0;
 	padding: 0;
 	/*<!--background-image: url(https://images.hdqwalls.com/wallpapers/abstract-fractal-desktop-b1.jpg);-->*/
-    background-image: url(https://mypcwalls.com/wp-content/uploads/2021/08/Abstract-Wallpaper.jpg);
+    background-image: url(https://s3.envato.com/files/aaf1ba3e-a327-419a-b5af-9f6afdd60132/inline_image_preview.jpg);
 	background-size: cover;
 
 	/*color: #fff;
@@ -202,8 +202,8 @@ body{
     <NavBar>
         <ul>
             <li><a href="http://localhost:3000/">FlowMap</a></li>
-            <li><a href="contact.asp">Options</a></li>
-            <li style="float: right"><a class="active" href="index">Login</a></li>
+            
+            <li style="float: right"><a class="active" href="/">Login</a></li>
           </ul>
     </NavBar>
     <div class="body"></div>
